$Id$

-- 2008-05-23 version 6.x-1.x-dev
* added German translation
* #261483 changed the way how FCKeditor is loaded (should solve some strange problems 
  with dissapearing content/FCKeditor)
* #261477 file browser should work in symlinked installations
* #261487 %t variable now points to the right place
* #261710 fixed "undefined variable: rid"

-- 2008-04-24 version 6.x-1.x-dev
* Added missing img_assist_fckeditor.js that should hav been included two days ago
* Updated README information

-- 2008-04-22 version 6.x-1.x-dev
* FCKeditor is now compatible with Image Assist module (http://drupal.org/project/img_assist)

-- 2008-04-21 version 6.x-1.x-dev
* Usability improvements: FCKeditor will now inform you in the administration section about
  possible misconfiguration

-- 2008-04-04 version drupal-6-x-1-2.1
* fixed #240608: removed javascript errors on fields without teaser break
* fixed issue with default list of fields where simplified toolbar should appear (Global Profile)

-- 2008-04-02 version drupal-6-x-1-2

* fixed #240230 (teaser was stripped when FCKeditor has been enabled and toogle was disabled)
* minor improvements in documentation, extended default ignore list
* fixed #238944 (body was stripped in preview mode when break tag was used)
* fixed E_NOTICE errors
* fixed problems with excl_mode / excl_list in global profile
* fixed issues with default inclusion or exclusion mode set to "include" when creating new profile

-- 2008-03-18 version drupal-6-x-1-1
* fixed issues with switching from text to fckeditor in the toogle, 
  all previous content within the body was lost
* FCKeditor now appears for super user even if "access fckeditor" permissions are not yet assigned.
  (the Advanced profile for authenticated users is assigned)
* corrected readme file
* fixed issues with Internet Explorer 
  (Object required error when "rich text editor toggle" was set to false)
* fixed issues with invalid validation of excluded fields