@@ -1,5 +1,8 @@
 $Id$
 
+-- 2008-06-19 version 5.x-2.x-dev
+* #207845 fixed issues with unknown toolbar item "DrupalPageBreak" and "PageBreak"
+
 -- 2008-05-23 version 6.x-1.x-dev
 * added German translation
 * #261483 changed the way how FCKeditor is loaded (should solve some strange problems 
